Nav tag z-index corrected

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -3,7 +3,7 @@ nav{
     width: max-content;
     // display: block;
     padding: 0.7rem 1.7rem;
-    z-index: 3;
+    z-index: 11;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
